Actualizar index.html
fix

--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
         <!-- Hero Section with Video -->
         <section id="inicio" class="relative min-h-screen flex items-center justify-center text-center text-white pt-20 hero-overlay">
             <div class="hero-video-container">
-                <!-- Placeholder video. Replace with a real video URL. -->
-                <video autoplay loop muted playsinline id="heroVideo">
+                <video autoplay loop muted playsinline id="heroVideo" poster="https://images.pexels.com/photos/3998425/pexels-photo-3998425.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
                     <source src="https://assets.mixkit.co/videos/preview/mixkit-barber-giving-a-client-a-haircut-48421-large.mp4" type="video/mp4">
                     [Video de un barbero trabajando]
                 </video>
@@ -133,19 +132,19 @@
                 <div class="h-1 w-24 bg-white mx-auto mt-4 mb-12"></div>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                     <div class="group relative overflow-hidden">
-                        <img src="https://placehold.co/600x800/2d3748/ffffff?text=Corte+Fade" alt="[Corte de pelo con fade]" class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-500">
+                        <img src="https://images.pexels.com/photos/897262/pexels-photo-897262.jpeg?auto=compress&cs=tinysrgb&w=800" alt="[Corte de pelo con fade]" class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-500">
                         <div class="absolute inset-0 bg-black bg-opacity-50 flex items-end p-6 opacity-0 group-hover:opacity-100 transition-opacity duration-500">
                             <h3 class="text-2xl text-white font-display uppercase">Fades Perfectos</h3>
                         </div>
                     </div>
                     <div class="group relative overflow-hidden">
-                        <img src="https://placehold.co/600x800/4a5568/ffffff?text=Colorimetría" alt="[Trabajo de colorimetría]" class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-500">
+                        <img src="https://images.pexels.com/photos/1813272/pexels-photo-1813272.jpeg?auto=compress&cs=tinysrgb&w=800" alt="[Trabajo de colorimetría]" class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-500">
                         <div class="absolute inset-0 bg-black bg-opacity-50 flex items-end p-6 opacity-0 group-hover:opacity-100 transition-opacity duration-500">
                             <h3 class="text-2xl text-white font-display uppercase">Colorimetría Pro</h3>
                         </div>
                     </div>
                     <div class="group relative overflow-hidden">
-                        <img src="https://placehold.co/600x800/718096/ffffff?text=Diseño+Freestyle" alt="[Diseño de pelo freestyle]" class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-500">
+                        <img src="https://images.pexels.com/photos/5240634/pexels-photo-5240634.jpeg?auto=compress&cs=tinysrgb&w=800" alt="[Diseño de pelo freestyle]" class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-500">
                         <div class="absolute inset-0 bg-black bg-opacity-50 flex items-end p-6 opacity-0 group-hover:opacity-100 transition-opacity duration-500">
                             <h3 class="text-2xl text-white font-display uppercase">Diseño Freestyle</h3>
                         </div>
@@ -160,7 +159,6 @@
                 <h2 class="text-5xl font-display text-white tracking-wider uppercase">Nuestros Servicios</h2>
                 <div class="h-1 w-24 bg-white mx-auto mt-4 mb-12"></div>
                 <div class="max-w-4xl mx-auto text-left space-y-12">
-                     <!-- Categories and services here... -->
                     <div>
                         <h3 class="text-3xl font-display text-white tracking-widest border-b-2 border-gray-700 pb-2 mb-6">BARBERÍA</h3>
                         <div class="space-y-4">
@@ -194,10 +192,9 @@
                 <h2 class="text-5xl font-display text-white tracking-wider uppercase">Nuestro Equipo</h2>
                 <div class="h-1 w-24 bg-white mx-auto mt-4 mb-12"></div>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-10 max-w-5xl mx-auto">
-                    <!-- Team members here... -->
-                    <div class="text-center group"><img src="https://placehold.co/400x400/1a1a1a/ffffff?text=Michael" alt="[Retrato del barbero Michael]" class="w-48 h-48 rounded-full mx-auto border-4 border-white object-cover transform group-hover:scale-110 transition-transform duration-300"><h3 class="mt-5 text-2xl font-display text-white uppercase">Michael The Barber</h3><p class="text-gray-400">Fundador / Especialista en Color</p></div>
-                    <div class="text-center group"><img src="https://placehold.co/400x400/1a1a1a/ffffff?text=Aleee" alt="[Retrato del barbero Aleee Cut]" class="w-48 h-48 rounded-full mx-auto border-4 border-white object-cover transform group-hover:scale-110 transition-transform duration-300"><h3 class="mt-5 text-2xl font-display text-white uppercase">Aleee Cut</h3><p class="text-gray-400">Experto en Fades</p></div>
-                    <div class="text-center group"><img src="https://placehold.co/400x400/1a1a1a/ffffff?text=Kevo" alt="[Retrato del barbero Kevo Cuts]" class="w-48 h-48 rounded-full mx-auto border-4 border-white object-cover transform group-hover:scale-110 transition-transform duration-300"><h3 class="mt-5 text-2xl font-display text-white uppercase">Kevo Cuts</h3><p class="text-gray-400">Especialista en Diseño Freestyle</p></div>
+                    <div class="text-center group"><img src="https://images.pexels.com/photos/3998425/pexels-photo-3998425.jpeg?auto=compress&cs=tinysrgb&w=800" alt="[Retrato del barbero Michael]" class="w-48 h-48 rounded-full mx-auto border-4 border-white object-cover transform group-hover:scale-110 transition-transform duration-300"><h3 class="mt-5 text-2xl font-display text-white uppercase">Michael The Barber</h3><p class="text-gray-400">Fundador / Especialista en Color</p></div>
+                    <div class="text-center group"><img src="https://images.pexels.com/photos/4946520/pexels-photo-4946520.jpeg?auto=compress&cs=tinysrgb&w=800" alt="[Retrato del barbero Aleee Cut]" class="w-48 h-48 rounded-full mx-auto border-4 border-white object-cover transform group-hover:scale-110 transition-transform duration-300"><h3 class="mt-5 text-2xl font-display text-white uppercase">Aleee Cut</h3><p class="text-gray-400">Experto en Fades</p></div>
+                    <div class="text-center group"><img src="https://images.pexels.com/photos/5323543/pexels-photo-5323543.jpeg?auto=compress&cs=tinysrgb&w=800" alt="[Retrato del barbero Kevo Cuts]" class="w-48 h-48 rounded-full mx-auto border-4 border-white object-cover transform group-hover:scale-110 transition-transform duration-300"><h3 class="mt-5 text-2xl font-display text-white uppercase">Kevo Cuts</h3><p class="text-gray-400">Especialista en Diseño Freestyle</p></div>
                 </div>
             </div>
         </section>
@@ -208,15 +205,14 @@
                 <h2 class="text-5xl font-display text-white tracking-wider uppercase">Galería Completa</h2>
                 <div class="h-1 w-24 bg-white mx-auto mt-4 mb-12"></div>
                 <div class="grid grid-cols-2 md:grid-cols-4 gap-2">
-                    <!-- Expanded gallery images -->
-                    <img src="https://placehold.co/400x500/333/fff?text=Estilo+1" alt="[Imagen de un corte de pelo con fade]" class="object-cover w-full h-full hover:opacity-75 transition-opacity duration-300">
-                    <img src="https://placehold.co/400x500/444/fff?text=Estilo+2" alt="[Imagen de un cabello platinado]" class="object-cover w-full h-full hover:opacity-75 transition-opacity duration-300">
-                    <img src="https://placehold.co/400x500/555/fff?text=Estilo+3" alt="[Imagen de un diseño de líneas en el pelo]" class="object-cover w-full h-full hover:opacity-75 transition-opacity duration-300">
-                    <img src="https://placehold.co/400x500/666/fff?text=Estilo+4" alt="[Imagen de una barba perfilada]" class="object-cover w-full h-full hover:opacity-75 transition-opacity duration-300">
-                    <img src="https://placehold.co/400x500/777/fff?text=Estilo+5" alt="[Imagen de un corte de pelo moderno]" class="object-cover w-full h-full hover:opacity-75 transition-opacity duration-300">
-                    <img src="https://placehold.co/400x500/888/fff?text=Estilo+6" alt="[Imagen de un peinado con textura]" class="object-cover w-full h-full hover:opacity-75 transition-opacity duration-300">
-                    <img src="https://placehold.co/400x500/999/fff?text=Estilo+7" alt="[Imagen de un corte clásico]" class="object-cover w-full h-full hover:opacity-75 transition-opacity duration-300">
-                    <img src="https://placehold.co/400x500/AAA/fff?text=Estilo+8" alt="[Imagen de un arreglo de barba]" class="object-cover w-full h-full hover:opacity-75 transition-opacity duration-300">
+                    <img src="https://images.pexels.com/photos/2061883/pexels-photo-2061883.jpeg?auto=compress&cs=tinysrgb&w=800" alt="[Imagen de un corte de pelo con fade]" class="aspect-w-1 aspect-h-1 object-cover w-full h-full hover:opacity-75 transition-opacity duration-300">
+                    <img src="https://images.pexels.com/photos/973401/pexels-photo-973401.jpeg?auto=compress&cs=tinysrgb&w=800" alt="[Imagen de un cabello platinado]" class="aspect-w-1 aspect-h-1 object-cover w-full h-full hover:opacity-75 transition-opacity duration-300">
+                    <img src="https://images.pexels.com/photos/769745/pexels-photo-769745.jpeg?auto=compress&cs=tinysrgb&w=800" alt="[Imagen de un diseño de líneas en el pelo]" class="aspect-w-1 aspect-h-1 object-cover w-full h-full hover:opacity-75 transition-opacity duration-300">
+                    <img src="https://images.pexels.com/photos/1319460/pexels-photo-1319460.jpeg?auto=compress&cs=tinysrgb&w=800" alt="[Imagen de una barba perfilada]" class="aspect-w-1 aspect-h-1 object-cover w-full h-full hover:opacity-75 transition-opacity duration-300">
+                    <img src="https://images.pexels.com/photos/3166833/pexels-photo-3166833.jpeg?auto=compress&cs=tinysrgb&w=800" alt="[Imagen de un corte de pelo moderno]" class="aspect-w-1 aspect-h-1 object-cover w-full h-full hover:opacity-75 transition-opacity duration-300">
+                    <img src="https://images.pexels.com/photos/3993449/pexels-photo-3993449.jpeg?auto=compress&cs=tinysrgb&w=800" alt="[Imagen de un peinado con textura]" class="aspect-w-1 aspect-h-1 object-cover w-full h-full hover:opacity-75 transition-opacity duration-300">
+                    <img src="https://images.pexels.com/photos/5483879/pexels-photo-5483879.jpeg?auto=compress&cs=tinysrgb&w=800" alt="[Imagen de un corte clásico]" class="aspect-w-1 aspect-h-1 object-cover w-full h-full hover:opacity-75 transition-opacity duration-300">
+                    <img src="https://images.pexels.com/photos/2779953/pexels-photo-2779953.jpeg?auto=compress&cs=tinysrgb&w=800" alt="[Imagen de un arreglo de barba]" class="aspect-w-1 aspect-h-1 object-cover w-full h-full hover:opacity-75 transition-opacity duration-300">
                 </div>
             </div>
         </section>
@@ -269,7 +265,7 @@
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.85s-.011 3.584-.069 4.85c-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07s-3.584-.012-4.85-.07c-3.252-.148-4.771-1.691-4.919-4.919-.058-1.265-.069-1.645-.069-4.85s.011-3.584.069-4.85c.149-3.225 1.664-4.771 4.919-4.919 1.266-.058 1.644-.07 4.85-.07zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948s.014 3.667.072 4.947c.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072s3.667-.014 4.947-.072c4.358-.2 6.78-2.618 6.98-6.98.059-1.281.073-1.689.073-4.948s-.014-3.667-.072-4.947c-.2-4.358-2.618-6.78-6.98-6.98-1.281-.058-1.689-.072-4.948-.072zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.162 6.162 6.162 6.162-2.759 6.162-6.162-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4s1.791-4 4-4 4 1.79 4 4-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.441 1.441 1.441 1.441-.645 1.441-1.441-.645-1.44-1.441-1.44z"/></svg>
                 </a>
             </div>
-            <p class="text-xs mt-6">© 2025 Michael The Barber Studios. Todos los derechos reservados.</p>
+            <p class="text-xs mt-6">&copy; 2025 Michael The Barber Studios. Todos los derechos reservados.</p>
             <p class="text-xs mt-1">Diseñado por [Tu Nombre/Agencia]</p>
         </div>
     </footer>
@@ -310,5 +306,4 @@
 
 </body>
 </html>
-
 
