Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 </a>
             </div>
             <p class="text-xs mt-6">&copy; 2025 Michael The Barber Studios. Todos los derechos reservados.</p>
-            <p class="text-xs mt-1">Diseñado por [Tu Nombre/Agencia]</p>
+            <p class="text-xs mt-1">Diseñado por JunaEmilioDev </p>
         </div>
     </footer>
 
