--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <header class="bg-black/80 backdrop-blur-sm fixed top-0 left-0 right-0 z-50">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="#" class="font-display text-3xl text-white tracking-wider">
-                <img src="IMG_0177.JPG" class="" alt="Logo">
+                <img src="IMG_0177.JPG" class="h-12 w-auto" alt="Logo">
             </a>
             <nav class="hidden md:flex space-x-8 uppercase text-sm tracking-widest">
                 <a href="#destacados" class="hover:text-white transition duration-300">Trabajos</a>
