--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <section id="inicio" class="relative min-h-screen flex items-center justify-center text-center text-white pt-20 hero-overlay">
             <div class="hero-video-container">
                 <video autoplay loop muted playsinline id="heroVideo" poster="/public/img/IMG_5984.JPG">
-                    <source src="/public/video/IMG_1683.MOV" type="video/MOV">
+                    <source src="/public/video/IMG_1683.mp4" type="video/mp4">
                     Tu navegador no es compatible con el video. Se recomienda usar un navegador moderno.
                 </video>
             </div>
