--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <meta name="twitter:image" content="https://TU-DOMINIO.com/public/img/IMG_5984.JPG"> <!-- URL absoluta de tu mejor imagen -->
 
     <!-- Favicon -->
-    <link rel="icon" href="/public/img/IMG_0177.JPG" type="image/jpeg">
+    <link rel="icon" href="/img/IMG_0177.JPG" type="image/jpeg">
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     
     <!-- CSS Personalizado (Ruta Corregida) -->
-    <link rel="stylesheet" href="/public/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 
     <!-- Google Analytics (GA4) - Reemplaza con tu ID de Medición -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
@@ -49,7 +49,7 @@
     <header class="bg-black/80 backdrop-blur-sm fixed top-0 left-0 right-0 z-50">
         <div class="container mx-auto px-6 py-2 flex justify-between items-center">
             <a href="#inicio" aria-label="Volver al inicio">
-                <img src="/public/img/IMG_0177.JPG" class="h-16 w-auto object-contain" alt="Logo de Michael The Barber Studios">
+                <img src="/img/IMG_0177.JPG" class="h-16 w-auto object-contain" alt="Logo de Michael The Barber Studios">
             </a>
             <nav class="hidden md:flex space-x-8 uppercase text-sm tracking-widest" aria-label="Navegación principal">
                 <a href="#destacados" class="hover:text-white transition duration-300">Trabajos</a>
@@ -74,9 +74,9 @@
         <!-- Hero Section -->
         <section id="inicio" class="relative min-h-screen flex items-center justify-center text-center text-white pt-20 hero-overlay">
             <div class="hero-video-container">
-                <video autoplay loop muted playsinline id="heroVideo" poster="/public/img/IMG_5984.JPG">
+                <video autoplay loop muted playsinline id="heroVideo" poster="/img/IMG_5984.JPG">
                     <!-- Asegúrate de tener este video en la carpeta /public/video/ -->
-                    <source src="/public/video/IMG_1683.mp4" type="video/mp4">
+                    <source src="/video/IMG_1683.mp4" type="video/mp4">
                     Tu navegador no es compatible con el video.
                 </video>
             </div>
@@ -98,16 +98,16 @@
                 <div class="section-divider"></div>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-4 md:gap-8">
                     <div class="group relative overflow-hidden rounded-lg">
-                        <img loading="lazy" decoding="async" src="/public/img/IMG_5984.JPG" alt="Hombre con un corte de pelo estilo fade y barba perfilada." class="img-zoom">
+                        <img loading="lazy" decoding="async" src="/img/IMG_5984.JPG" alt="Hombre con un corte de pelo estilo fade y barba perfilada." class="img-zoom">
                         <div class="img-overlay"><h3 class="img-title">Fades Perfectos</h3></div>
                     </div>
                     <div class="group relative overflow-hidden rounded-lg">
-                        <img loading="lazy" decoding="async" src="/public/img/IMG_8078.JPG" alt="Joven con el pelo teñido de un color fantasía platinado." class="img-zoom">
+                        <img loading="lazy" decoding="async" src="/img/IMG_8078.JPG" alt="Joven con el pelo teñido de un color fantasía platinado." class="img-zoom">
                         <div class="img-overlay"><h3 class="img-title">Colorimetría Pro</h3></div>
                     </div>
                     <div class="group relative overflow-hidden rounded-lg">
                         <!-- Nombre de archivo corregido -->
-                        <img loading="lazy" decoding="async" src="/public/img/IMG_0177-1.JPG" alt="Corte de pelo con un diseño de líneas y formas geométricas." class="img-zoom">
+                        <img loading="lazy" decoding="async" src="/img/IMG_0177-1.JPG" alt="Corte de pelo con un diseño de líneas y formas geométricas." class="img-zoom">
                         <div class="img-overlay"><h3 class="img-title">Diseño Freestyle</h3></div>
                     </div>
                 </div>
@@ -125,6 +125,6 @@
     </footer>
 
     <!-- JavaScript Personalizado (Ruta Corregida) -->
-    <script src="/public/js/main.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
