--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Open Graph para Redes Sociales -->
     <meta property="og:title" content="Michael The Barber Studios - Estilo y Precisión">
     <meta property="og:description" content="La mejor barbería de Coquimbo. Descubre nuestros trabajos y reserva tu cita.">
-    <meta property="og:image" content="https://TU-DOMINIO.com/public/img/IMG_5984.JPG"> <!-- URL absoluta de tu mejor imagen -->
+    <meta property="og:image" content="https://TU-DOMINIO.com/img/IMG_5984.JPG">
     <meta property="og:url" content="https://TU-DOMINIO.com/">
     <meta property="og:type" content="website">
     <meta property="og:locale" content="es_ES">
@@ -22,7 +22,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Michael The Barber Studios - Estilo y Precisión">
     <meta name="twitter:description" content="La mejor barbería de Coquimbo. Descubre nuestros trabajos y reserva tu cita.">
-    <meta name="twitter:image" content="https://TU-DOMINIO.com/public/img/IMG_5984.JPG"> <!-- URL absoluta de tu mejor imagen -->
+    <meta name="twitter:image" content="https://TU-DOMINIO.com/img/IMG_5984.JPG">
 
     <!-- Favicon -->
     <link rel="icon" href="/img/IMG_0177.JPG" type="image/jpeg">
@@ -30,10 +30,10 @@
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     
-    <!-- CSS Personalizado (Ruta Corregida) -->
+    <!-- CSS Personalizado -->
     <link rel="stylesheet" href="/css/style.css">
 
-    <!-- Google Analytics (GA4) - Reemplaza con tu ID de Medición -->
+    <!-- Google Analytics (GA4) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -75,7 +75,6 @@
         <section id="inicio" class="relative min-h-screen flex items-center justify-center text-center text-white pt-20 hero-overlay">
             <div class="hero-video-container">
                 <video autoplay loop muted playsinline id="heroVideo" poster="/img/IMG_5984.JPG">
-                    <!-- Asegúrate de tener este video en la carpeta /public/video/ -->
                     <source src="/video/IMG_1683.mp4" type="video/mp4">
                     Tu navegador no es compatible con el video.
                 </video>
@@ -106,17 +105,12 @@
                         <div class="img-overlay"><h3 class="img-title">Colorimetría Pro</h3></div>
                     </div>
                     <div class="group relative overflow-hidden rounded-lg">
-                        <!-- Nombre de archivo corregido -->
                         <img loading="lazy" decoding="async" src="/img/IMG_0177-1.JPG" alt="Corte de pelo con un diseño de líneas y formas geométricas." class="img-zoom">
                         <div class="img-overlay"><h3 class="img-title">Diseño Freestyle</h3></div>
                     </div>
                 </div>
             </div>
         </section>
-
-        <!-- El resto de tus secciones (Servicios, Equipo, etc.) -->
-        <!-- ... -->
-
     </main>
 
     <!-- Footer -->
@@ -124,7 +118,7 @@
         <!-- Contenido del footer -->
     </footer>
 
-    <!-- JavaScript Personalizado (Ruta Corregida) -->
+    <!-- JavaScript Personalizado -->
     <script src="/js/main.js"></script>
 </body>
 </html>
