--- a/index.html
+++ b/index.html
@@ -111,6 +111,38 @@
                 </div>
             </div>
         </section>
+        <!-- SECCION DE SERVICIOS-->
+        <section id="servicios" class="py-20 bg-gray-900 animated">
+            <div class="container mx-auto px-6 text-center">
+                <h2 class="section-title">Nuestros Servicios</h2>
+                <div class="section-divider"></div>
+                <div class="max-w-4xl mx-auto text-left space-y-12">
+                    <div>
+                        <h3 class="text-3xl font-display text-white tracking-widest border-b-2 border-gray-700 pb-2 mb-6">BARBERÍA</h3>
+                        <div class="space-y-4">
+                            <div class="flex justify-between items-center"><p class="text-xl">Corte de Cabello</p><p class="text-xl font-bold">$12.000</p></div>
+                            <div class="flex justify-between items-center"><p class="text-xl">Corte de Cabello + Barba</p><p class="text-xl font-bold">$16.000</p></div>
+                            <div class="flex justify-between items-center"><p class="text-xl">Corte + Barba + Limpieza Facial</p><p class="text-xl font-bold">$22.000</p></div>
+                            <div class="flex justify-between items-center"><p class="text-xl">Barba</p><p class="text-xl font-bold">$6.000</p></div>
+                        </div>
+                    </div>
+                    <div>
+                        <h3 class="text-3xl font-display text-white tracking-widest border-b-2 border-gray-700 pb-2 mb-6">COLORIMETRÍA</h3>
+                        <div class="space-y-4">
+                            <div class="flex justify-between items-center"><p class="text-xl">Bloque de Color</p><p class="text-xl font-bold">$60.000</p></div>
+                            <div class="flex justify-between items-center"><p class="text-xl">Platinado Global</p><p class="text-xl font-bold">$70.000</p></div>
+                            <div class="flex justify-between items-center"><p class="text-xl">Visos</p><p class="text-xl font-bold">$60.000</p></div>
+                        </div>
+                    </div>
+                    <div>
+                        <h3 class="text-3xl font-display text-white tracking-widest border-b-2 border-gray-700 pb-2 mb-6">EXTRAS</h3>
+                        <div class="space-y-4">
+                            <div class="flex justify-between items-center"><p class="text-xl">Ondulación Permanente</p><p class="text-xl font-bold">$55.000</p></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
